apps/supercloud-ui/supercloud-ui-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "350"
  name: supercloud-ui-app
  namespace: supercloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supercloud-ui-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: supercloud-ui-app
        deploymentconfig: supercloud-ui-app
    spec:
      containers:
        - name: supercloud-ui-app
          image: >-
            image-registry.openshift-image-registry.svc:5000/supercloud-build/supercloud-ui-app:latest
          imagePullSecrets:
          - name: supercloud-image-registry
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      imagePullSecrets:
        - name: supercloud-image-registry
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
