apps/supercloud-ui/supercloud-ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: supercloud-ui-svc
  namespace: supercloud
  annotations:
    argocd.argoproj.io/sync-wave: "360"
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  clusterIPs:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: supercloud-ui-app
    deploymentconfig: supercloud-ui-app
