apps/supercloud-ui/supercloud-ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: supercloud-ui
  namespace: supercloud
  annotations:
    argocd.argoproj.io/sync-wave: "370"
spec:
  to:
    kind: Service
    name: supercloud-ui
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
